[package]
name = "ess-manager-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
di-common = { path = "deps/di-common", features = ["opendso"]}
di-rs = { path = "deps/di-common/deps/di-rs" }
tokio = { version = "1", features = ["full"] }
async-nats = "0.29.0"
bytes = "1.4.0"
futures = "0.3"